--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
-# Last updated: 2024-03-22 20:02:00
-
 # Redis Configuration
 # For local Redis:
 REDIS_URL=redis://localhost:6379
@@ -7,6 +5,7 @@ REDIS_URL=redis://localhost:6379
 # REDIS_URL=redis://your-instance.upstash.io:port
 REDIS_PREFIX=docstore
 REDIS_USERNAME=  # Required for Upstash
+REDIS_PASSWORD=  # Required for Upstash
 REDIS_USE_SSL=false  # Set to true for Upstash
 REDIS_HOST=localhost
 REDIS_PORT=6379
@@ -14,7 +13,7 @@ REDIS_INDEX_NAME=embeddings_idx
 
 # Embedding Configuration
 EMBEDDING_PROVIDER=ollama
-EMBEDDING_MODEL=nomic-embed-text
+EMBEDDING_MODEL=llama2
 EMBEDDING_DIMENSION=768
 EMBEDDING_BATCH_SIZE=32
 
@@ -24,8 +23,8 @@ CHUNK_OVERLAP=100
 MIN_CHUNK_SIZE=100
 
 # Google Drive Configuration
-GOOGLE_DRIVE_CREDENTIALS_PATH=ardent-pier-454519-h5-019a741746b7.json
-GOOGLE_DRIVE_ROOT_FOLDER_ID=1pA7ohJIb25HJdPGpWvnNnitZ6wPsg4Ee
+GOOGLE_DRIVE_CREDENTIALS_PATH=path/to/credentials.json
+GOOGLE_DRIVE_ROOT_FOLDER_ID=your_root_folder_id
 
 # Storage Configuration
 STORAGE_CACHE_ENABLED=true
